--- a/map.css
+++ b/map.css
@@ -20,6 +20,17 @@ h1 {
 }
 
 object {
-    height: 1100px;
-    width: 1600px;
+    height: 1000px;
+    width: 1000px;
 }
+
+.menu {
+             
+    
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+     
+    
+}
+
+
+
