--- a/style.css
+++ b/style.css
@@ -21,31 +21,33 @@ h1 {
     margin-top: 40px;
 }
 #category-name{
-    margin: 10px;
-    font-size: 35px;
+    float: left;
+    margin: 5px;
+    font-size: 15px;
     color:steelblue;
-    position: relative; left: 400px;
+    position: relative; bottom: 400px; left: 300px; 
 }
 #item-card{
-    width: 180px;
-    height: 220px;
-    padding: 10px;
-    margin: 10px;
+    float: left;
+    width: 140px;
+    height: 180px;
+    padding: 5px;
+    margin: auto;
     display: inline-block;
-    border-radius: 5px;
+    border-radius: 8px;
     background: rgb(253, 221, 226);
-    cursor: pointer;
     transition: 0.5s all ease-in-out;
-    position: relative; left: 400px;
+    position: relative; bottom: 350px; left: 200px;
 }
 #item-card img{
-    width: 120px;
-    height: 120px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     margin: auto;
     display: block;
     margin-bottom: 15px;
     transition: 0.5s all ease-in-out;
+    cursor: pointer;
 }
 #item-card img:hover{
     transform: scale(1.1);
@@ -83,4 +85,10 @@ h1 {
     font-weight: 5;
     color: darkslategray;
     font-size: 15px;
+}
+#box{
+    position: relative; left: 1200px;
+}
+#Kundkorg{
+    position: relative; left: 1200px;
 }
