--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ h2 {
     position: relative; left: 1200px;
 }
 #Kundkorg{
-    position: relative; left: 1200px;
+    position: relative; left: 1270px;
 }
 
 
@@ -345,7 +345,7 @@ h2 {
     font-size: 40px;
     padding: 1px;
     position: relative; left: 110px; bottom: 150px;
-    color: red;
+
 }
 
 #arrowup{
@@ -363,45 +363,45 @@ h2 {
 #computerScore2{
     font-size: 40px;
     padding: 1px;
-    position: relative; left: 110px; bottom: -205px;
-    color: blue;
+    position: relative; left: 110px; bottom: -27px;
+
 }
 
 #arrowup2{
     cursor: pointer;
     padding: 1px;
-    position: absolute; bottom: 270px; left: 150px;
+    position: absolute; bottom: 450px; left: 150px;
 }
 
 #arrowdown2{
     cursor: pointer;
     padding: 1px;
-    position: absolute; bottom: 250px; left: 150px;
+    position: absolute; bottom: 430px; left: 150px;
 }
 
 #computerScore3{
     font-size: 40px;
     padding: 1px;
-    position: relative; left: 110px; bottom: 160px;
-    color: green;
+    position: relative; left: 110px; bottom: -30px;
+
 }
 
 #arrowup3{
     cursor: pointer;
     padding: 1px;
-    position: absolute; bottom: 450px; left: 150px;
+    position: absolute; bottom: 270px; left: 150px;
 }
 
 #arrowdown3{
     cursor: pointer;
     padding: 1px;
-    position: absolute; bottom: 430px; left: 150px;
+    position: absolute; bottom: 250px; left: 150px;
 }
 #count1{
     visibility: hidden;
 }
 #count2{
-    visibility: visible;
+    visibility: hidden;
 }
 #count3{
     visibility: hidden;
@@ -426,13 +426,48 @@ h2 {
     display: block;
     transition: 0.5s all ease-in-out;
     cursor: pointer;
-    position: absolute; bottom: 240px; left: 10px    ;
+    position: absolute; bottom: 420px; left: 10px    ;
 }
 #val2{
-    position: absolute; bottom: 300px; left: 50px;
+    position: absolute; bottom: 500px; left: 50px;
 }
 
+#maxdrink{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%; 
+    display: block;
+    transition: 0.5s all ease-in-out;
+    cursor: pointer;
+    position: absolute; bottom: 230px; left: 10px    ;
+}
 
+#val3{
+    position: absolute; bottom: 320px; left: 80px;
+}
+
+#meny1{
+    display: none;
+}
+#meny2{
+    display: none;
+}
+#meny3{
+    display: none;
+}
+#paybutton{
+    background-color: #008CBA;; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    cursor: pointer;
+    position: absolute; left: 20px; bottom: -150px;
+}
 
 
 
