--- a/map.css
+++ b/map.css
@@ -87,6 +87,15 @@ object {
     width: 100%;
     /* The width is the width of the web page */
   }
+  
+  #minadress{
+    color: black;
+    font-size: 22;
+    font-family: mom;
+    background-color: lightblue;
+    display: inline-block;
+    
+  }
 
 
 
