--- a/style.css
+++ b/style.css
@@ -95,12 +95,12 @@ h2 {
     width: 140px;
     height: 180px;
     padding: 5px;
-    margin: 40px;
+    margin: 80px;
     display: inline-block;
     border-radius: 8px;
     background:   grey;
     transition: 0.5s all ease-in-out;
-    position: relative; bottom: 550px; left: 360px;
+    position: relative; bottom: 550px; left: 250px;
 }
 #item-card img{
     width: 80px;
@@ -155,7 +155,13 @@ h2 {
     position: relative; left: 1200px;
 }
 #Kundkorg{
-    position: relative; left: 1270px;
+    position: relative; left: 324px;
+    background-color: #008CBA;
+    border-radius: 5%;
+    padding: 1px 20px;
+    font-family: Lato;
+    display: inline-block;
+    color: gold;
 }
 
 
@@ -173,7 +179,7 @@ h2 {
     border-radius: 8px;
     background:   grey;
     transition: 0.5s all ease-in-out;
-    position: absolute; bottom: -100px; left: 280px
+    position: absolute; bottom: -100px; left: 315px
 }
 #mcmeny{
     margin: 5px;
@@ -233,7 +239,7 @@ h2 {
     border-radius: 8px;
     background:   grey;
     transition: 0.5s all ease-in-out;
-    position: absolute; bottom: -100px; left: 560px
+    position: absolute; bottom: -100px; left: 625px
 }
 #maxmeny{
     margin: 5px;
@@ -292,7 +298,7 @@ h2 {
     border-radius: 8px;
     background:   grey;
     transition: 0.5s all ease-in-out;
-    position: absolute; bottom: -100px; left: 860px
+    position: absolute; bottom: -100px; left: 938px
 }
 #BKmeny{
     margin: 5px;
@@ -456,7 +462,7 @@ h2 {
     display: none;
 }
 #paybutton{
-    background-color: #008CBA;; /* Green */
+    background-color: #008CBA;;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -466,19 +472,39 @@ h2 {
     font-size: 16px;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     cursor: pointer;
-    position: absolute; left: 20px; bottom: -150px;
+    position: absolute; left: 48px; bottom: -130px;
+    transition: 0.5s all ease-in-out;
+}
+
+#paybutton:hover{
+    transform: scale(1.1);
 }
 
 #pay{
     visibility: visible;
+    position: relative; /*left: 30px*/
+    float: left;
+  
 }
 #kr{
-    position: relative; bottom: 43px; left: 31px;
+    position: relative; /*bottom: 43px; left: 61px;*/
+    float: left;
 }
 #betalruta{
-    position: absolute; right: 210px; bottom: -150px;
+    position: absolute; right: 143px; bottom: -100px;
+    background-color: #008CBA;
+    display: block;
+    width: 100px;
+    padding: 1px 20px;
+    border-radius: 5%;
+    text-align: center;
+    color: gold;
+    width: fit-content;
+}
 
-   
+#priset{
+    position: relative; /*top: 40px; right: 70px;*/
+    float: left;
 }
 
 
